--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=p@ssword
 DB_DATABASE=capstone_agriculture_db
-SESSION_SECRET=somegibberishsecret -->
-
+SESSION_SECRET=somegibberishsecret
+ -->
